fix: Works on smaller height screens

--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -7,7 +7,7 @@
 }
 
 .home-card {
-    height: 60vh;
+    min-height: 60vh;
     margin-top: 5%;
     margin-bottom: 5%;
 }
